# concordium-desktop-wallet

./: .#package.json  .eslintignore  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .stylelintignore  .stylelintrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  babel.config.js  identity.json  jest.config.js  jest.config.ts  package.json  testdb.sql  tsconfig.json  tsconfig.sb.json  webpack.config.js
.github/workflows/: build-debug.yaml  build-lint-test.yml  release.yaml  yarn-audit.yml
.storybook/: main.js  preview-head.html  preview.js
.yarn/patches/: @noble-hashes-npm-1.7.1-4106ab26c5.patch  react-hook-form-npm-6.15.8-53520bbd17.patch
app/: Main.css  Routes.tsx  app-dev.html  app.global.css  app.html  global.ts  index.tsx  ledgerObserver.ts  main.dev.ts  main.module.scss  main.ts  menu.ts  package.json  preload.js  preload.ts  preloadLedgerTypes.ts  preloadTypes.ts  rootReducer.ts  store.ts
app/components/: AccountBalanceView.tsx  AccountCreation.tsx  AccountCreationChooseIdentity.tsx  AccountCreationFinal.tsx  AccountCreationGenerate.tsx  AccountCreationPickAttributes.tsx  AccountCreationPickName.tsx  AccountList.tsx  AccountListElement.tsx  AccountView.tsx  Accounts.css  Accounts.module.scss  Accounts.tsx  AddAddress.tsx  AddBakerDetailsForm.tsx  AddressBookElementView.tsx  AddressBookEntryForm.tsx  AddressBookList.tsx  AddressBookListElement.tsx  AdressBook.tsx  AppUpdateNotification.tsx  AutoUpdateNotification.tsx  BakerPendingChange.tsx  ChoiceModal.tsx  ClosingBakerPoolNotification.tsx  ConfirmTransfer.tsx  ConnectionStatusComponent.tsx  CopiableListElement.tsx  CopyButton.tsx  Countdown.tsx  DecryptComponent.tsx  DelegationPendingChange.tsx  DeleteAddress.tsx  DisplayAccountCredentialUpdate.tsx  DisplayAddress.tsx  DisplayAsQR.tsx  DisplayEstimatedFee.tsx  DisplayFee.tsx  DisplayIdentityAttributes.tsx  DisplayMemo.tsx  (+70 more)
app/constants/: attributeNames.json  databaseNames.json  errorMessages.json  exportTransactionFields.json  externalConstants.json  genesis.json  grpcMethods.json  ipcCommands.json  ipcRendererCommands.json  ledgerConstants.json  ledgerIpcCommands.json  localStorage.json  logConstants.json  moreActionLocations.json  recoveryConstants.json  routes.json  settingKeys.json  transactionKindNames.json  transactionKinds.json  transactionLocations.json  transferLocations.json  updateConstants.json  urls.json  verification.json  workerCommands.json
app/containers/: AccountCreationPage.tsx  AccountPage.tsx  Accounts.css  AccountsPage.tsx  AddressBookPage.tsx  ExportImportPage.tsx  HomePage.tsx  (+12 more)
configs/: webpack.config.base.js  webpack.config.main.dev.js  webpack.config.main.prod.babel.js  webpack.config.main.prod.js  webpack.config.preload.dev.js  webpack.config.preload.prod.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.dev.dll.js  webpack.config.renderer.dev.js  webpack.config.renderer.prod.babel.js  webpack.config.renderer.prod.js  webpack.config.styles.js
pkg/: README.md  desktop_wallet.d.ts  desktop_wallet.js  desktop_wallet_bg.js  desktop_wallet_bg.wasm  desktop_wallet_bg.wasm.d.ts  index.js  package.json
proto/: api.proto
rust-src/: aux_functions.rs  external_functions.rs  genesis_account.rs  helpers.rs  keygen.rs  lib.rs  types.rs
scripts/: build.js  cbor.ts  customSign.js  desktop-wallet-ci.Dockerfile  disclaimer.js  down.ts  fileDigest.js  generator_test.py  hashFile.js  linux.Jenkinsfile  macos.Jenkinsfile  migrate.ts  notarize.js  proposal-generator.py  proposal_generator.py  test_proposal_generator.py  tsconfig.json  up.ts  welcome-proposal-generator.py  windows.Jenkinsfile
stories/: Button.tsx  Header.tsx  Page.tsx
test/: loadModules.ts  mockWindow.ts  polyfills.ts
(+1523 files in other folders)
