[package]
name = "desktop_wallet"
version = "0.1.0"
authors = ["Concordium AG <contact@concordium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.68"
ledger = "0.2"

libc = "0.2"
serde = "1.0"
serde_json = "1.0"
pairing = "0.15"
failure = "0.1"
ed25519-dalek = "=1.0.0"
hex = "0.4"

[dependencies.wallet]
path = "deps/crypto/rust-src/wallet"
version = "0"

[dependencies.id]
path = "deps/crypto/rust-src/id"
version = "0"

[dependencies.curve_arithmetic]
path = "deps/crypto/rust-src/curve_arithmetic"
version = "0"

[dependencies.dodis_yampolskiy_prf]
path = "deps/crypto/rust-src/dodis_yampolskiy_prf"
version = "0"

[dependencies.ffi_helpers]
path = "deps/crypto/rust-src/ffi_helpers"
version = "0"

[dependencies.crypto_common]
path = "deps/crypto/rust-src/crypto_common"
version = "0"

[lib]
name = "desktop_wallet"
crate-type = ["cdylib"]
path = "rust-src/lib.rs"

