[package]
name = "desktop_wallet"
version = "0.1.0"
authors = ["Concordium AG <contact@concordium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }

libc = "0.2"
pairing = "0.15"
failure = "0.1"
ed25519-dalek = "=1.0.0"
hex = "0.4"
ff = "0.5"
either = "1.6"
sha2 = "0.9"

console_error_panic_hook = "0.1.6"

[dependencies.keygen_bls]
path = "deps/crypto/rust-src/keygen_bls"
version = "0"

[dependencies.id]
path = "deps/crypto/rust-src/id"
version = "0"

[dependencies.curve_arithmetic]
path = "deps/crypto/rust-src/curve_arithmetic"
version = "0"

[dependencies.dodis_yampolskiy_prf]
path = "deps/crypto/rust-src/dodis_yampolskiy_prf"
version = "0"

[dependencies.ffi_helpers]
path = "deps/crypto/rust-src/ffi_helpers"
version = "0"

[dependencies.crypto_common]
path = "deps/crypto/rust-src/crypto_common"
version = "0"

[dependencies.pedersen_scheme]
path = "deps/crypto/rust-src/pedersen_scheme"
version = "0"

[dependencies.ps_sig]
path = "deps/crypto/rust-src/ps_sig"
version = "0"

[dependencies.encrypted_transfers]
path = "deps/crypto/rust-src/encrypted_transfers"
version = "0"

[dependencies.elgamal]
path = "deps/crypto/rust-src/elgamal"
version = "0"

[lib]
name = "desktop_wallet"
crate-type = ["cdylib"]
path = "rust-src/lib.rs"

